@@ -5,6 +5,9 @@
 $copyowner = 'ownOnline';
 // URL for Website of your Company/website etc. 
 $copyowner_url = 'https://ownonline.eu/';
+$copyowner_mail = 'inbox@ownonline.eu';
+$copyowner_webmaster_url = 'https://ownonline.eu/';
+$copyowner_webmaster_mail = 'inbox@ownonline.eu';
 // For Legal-Reasons: Define a URL to your Impress oder Priacy-Policy (for the Server, on which oOP is running) If you do not have such a site, please get one, especially if your server is accessible on the Internet. There are legal reasons for this. You can have such documents generated on various websites. If you now have an imprint and a data protection declaration, but no page for it, you can also insert it into the legal file accordingly and then link this page '/engine/legal/index.php'.
 $privacy_url = 'https://ownonline.eu/datenschutz';
 $impress_url = 'https://ownonline.eu/impressum';
