@@ -3,14 +3,14 @@ echo "<!---- CENTRAL ERROR LOG! ----->";
 echo "<script>";
 echo "// Funktion, die den errorHandler beim Laden der Seite auslöst";
 echo "// window.addEventListener('load', function() {";
-echo "//    errorHandler('Beispiel Fehlermeldung beim Laden der Seite.');";
+echo "//    errorHandler('" .$lang['centralerrorlog_error_occured'] ."');";
 echo "// });";
 echo "self.addEventListener('fetch', function(event) {";
 echo "    event.respondWith(";
 echo "        fetch(event.request)";
 echo "        .catch(function() {";
 echo "            const url = new URL(event.request.url);";
-echo "            errorHandler('Netzwerkfehler beim Laden von ' + url.href);";
+echo "            errorHandler('" .$lang['centralerrorlog_neterror_occured'] ."' + url.href);";
 echo "        })";
 echo "    );";
 echo "});";
