@@ -72,7 +72,7 @@
       <div id="details-buttons" jstcache="0">
       
          <form style="display: flex;  flex-flow: row wrap;"  action="" jstcache="0">
-            <a style="fore-color: white;" type="submit" href="mailto:inbox@ownonline.eu" jsselect="reloadButton" jstcache="8">Webmaster Kontaktieren</a>
+            <a style="fore-color: white;" type="submit" href="mailto:<?php echo $copyowner_webmaster_mail ?>" jsselect="reloadButton" jstcache="8"><?php echo $copyowner_webmaster_mail ?></a>
           
        </form>
       </div>
