@@ -1836,10 +1836,10 @@ TODO(https://crbug.com/852872): UI for offline suggested content is incomplete.
       <div class="icon icon-disconnected" jseval="updateIconClass(this.classList, iconClass)" alt="" jstcache="2"></div> &nbsp; <div class="icon icon-page-error" jseval="updateIconClass(this.classList, iconClass)" alt="" jstcache="2"></div>
       <div id="main-message" jstcache="0">
           <h1 jstcache="0">
-          <span jsselect="heading" jsvalues=".innerHTML:msg" jstcache="14">'oOPlay' ist abgestürzt</span>
+          <span jsselect="heading" jsvalues=".innerHTML:msg" jstcache="14">'oOPlay' can not load properly</span>
           <a id="error-information-button" class="hidden" onclick="toggleErrorInformationPopup();" jstcache="0"></a>
         </h1>
-        <p jsselect="summary" jsvalues=".innerHTML:msg" jstcache="3"><b><u>APP-Exception: oOPlay hat die Verbindung zu unerlässlichen Ressourcen verloren!</u></b> <br><br>Erklärung: Als Internet gestützte WebApp ist ‚oOPlay‘ von Ressourcen abhängig, die im Internet gehostet sind. Die Verbindung zu diesen unerlässlichen Ressourcen konnte nicht aufgebaut werden oder ist abgerissen. Das kann leider unzählige Ursachen haben. Es könnte sein, dass Ihr Gerät derzeit Schwierigkeiten hat eine Verbindung herzustellen, da es selbst oder ein anderes Gerät in der Verbindungskette (Router, Internetprovider, DNS-Server, Zielserver) für die Verbindungsunterbrechung verantwortlich ist.<br><br> ℹ Im Hintergrund arbeitet ein Skript daran, die Verbindung zu überwachen und wenn möglich wiederherzustellen. Mehr können wir derzeit aber nicht tun. Sollte der Fehler nicht auf Ihrer Seite liegen, arbeiten die zuständigen Stellen bestimmt schon an einer Lösung. Wir bitten Sie deshalb um Geduld. </p>
+        <p jsselect="summary" jsvalues=".innerHTML:msg" jstcache="3"><b><u>'APP-Exception: oOPlay has lost the connection to essential resources!</u></b> <br><br>Explanation: As an Internet-based WebApp, "oOPlay" depends on resources hosted on the Internet. The connection to these essential resources could not be established or has been interrupted. This can unfortunately have countless causes. It could be that your device is currently having trouble establishing a connection, as it or another device in the connection chain (router, internet provider, DNS server, target server) is responsible for the connection interruption.<br><br> ℹ A script is working in the background to monitor the connection and restore it if possible. However, we can't do more at the moment. If the error is not on your side, the responsible parties are certainly already working on a solution. We therefore ask for your patience.</p>
         <div id="https-upgrades-message" class="hidden" jstcache="0">
           <p id="https-upgrades-message-details" jsselect="httpsUpgradesMessage" jsvalues=".innerHTML:msg" class="hidden" jstcache="15" style="display: none;"></p>
         </div>
