@@ -3,7 +3,7 @@
   <meta name="theme-color" content="#fff">
   <meta name="viewport" content="width=device-width, initial-scale=1.0,
                                  maximum-scale=1.0, user-scalable=no">
-  <title>⚠ Pflichtangaben nicht gefunden - oOPlay</title>
+  <title>⚠ Mandatory information not found! - oOPlay</title>
   <style>/* Copyright 2017 The Chromium Authors
  * Use of this source code is governed by a BSD-style license that can be
  * found in the LICENSE file. */
@@ -1837,17 +1837,16 @@ TODO(https://crbug.com/852872): UI for offline suggested content is incomplete.
       <div class="icon icon-disabled" jseval="updateIconClass(this.classList, iconClass)" alt="" jstcache="2"></div>
       <div id="main-message" jstcache="0">
           <h1 jstcache="0">
-          <span jsselect="heading" jsvalues=".innerHTML:msg" jstcache="14">'oOPlay' konnte nicht gestartet werden</span>
+          <span jsselect="heading" jsvalues=".innerHTML:msg" jstcache="14">'oOPlay' can not start</span>
           <a id="error-information-button" class="hidden" onclick="toggleErrorInformationPopup();" jstcache="0"></a>
         </h1>
-        <p jsselect="summary" jsvalues=".innerHTML:msg" jstcache="3"><b><u>APP-Exception: Ohne Stream-URL kann kein Player gestartet werden.</u></b> <br><br>Erklärung:Sie haben 'oOPlay' ohne eine Stream-URL gestartet. Es wird jedoch eine URL zu einem HTML5-kompatiblen Audiostream benötigt. ‚oOPlay‘ bietet Ihnen zwei verschiedene Wege diese URL zu übermitteln: <br><br>
-        Erweitern Sie die URL zum Abruf von ‚oOPlay‘ (https://oop.ownonline.eu/play.php) und ergänzen Sie eines der folgenden Parameter – selbstverständlich mit entsprechendem Wert.
-        <ul>
-            <li>Zum Abspielen einer Webradio-Station vom Anbieter <a target="_blank" href="https://laut.fm/">Laut.fm</a>: <mark>?lfmstream= NAME der Station </mark> <br><i>Beispiel: Die Station laut.fm/eins wird mit 'oOPlay' über folgende URL abgespielt: <a href="https://oop.ownonline.eu/play.php?lfmstream=eins"> <mark>?lfmstream=eins</mark></a>         </i>   </li>
-            <li> Zum Abspielen eines Audiostream einer beliebigen anderen kompatiblen Abspielquelle nutzen Sie den Parameter <mark>?webstream= URL zum Stream oder Dokument</mark> <br><i>Beispiel: Zum Abspielen des ‚oOPlay‘-Testfiles: <a href="https://oop.ownonline.eu/play.php?webstream=https://ownonline.eu/oop/src/assets/audio/winxp11.mp3"><mark>?webstream=https://ownonline.eu/oop/src/assets/audio/winxp11.mp3</mark></a>         </i><br>Oder zum Abspielen eines andere Audio-Livestreams: <a href="https://oop.ownonline.eu/play.php?webstream=https://icecast.omroep.nl/radio2-bb-mp3"><mark>?webstream=https://icecast.omroep.nl/radio2-bb-mp3</mark></a>        </i>  </li>
-        </ul>
-        
-        <br><br>-- Als Seitenbetreiber sollten Sie die Anfrage-URL für 'oOPlay' überprüfen. Nutzen Sie hierzu auch gerne die unten verlinkte Dokumentation von 'oOPlay' <br>-- Als Besucher einer Webseite, informieren Sie bitte den Seitenbetreiber über den Fehler. </p>
+        <p jsselect="summary" jsvalues=".innerHTML:msg" jstcache="3"><b><u>APP-Exception: Without a stream URL, the player cannot be started.</u></b> <br><br>Explanation: You have started oOPlay without a stream URL. However, a URL to an HTML5-compatible audio stream is required. oOPlay offers you two different ways to provide this URL: <br><br>
+          Expand the URL for accessing oOPlay (https://oop.ownonline.eu/play.php) and add one of the following parameters – of course with the corresponding value.
+          <ul>
+              <li>To play a web radio station from the provider <a target="_blank" href="https://laut.fm/">Laut.fm</a>: <mark>?lfmstream= NAME of the station </mark> <br><i>Example: The station laut.fm/eins will be played with oOPlay using the following URL: <a href="https://oop.ownonline.eu/play.php?lfmstream=eins"><mark>?lfmstream=eins</mark></a>         </i>   </li>
+              <li>To play an audio stream from any other compatible playback source, use the parameter <mark>?webstream= URL to the stream or document</mark> <br><i>Example: To play the oOPlay test file: <a href="https://oop.ownonline.eu/play/?webstream=https://oop.ownonline.eu/samples/This%20is%20a%20freakin%27%20Sample.mp3"><mark>?webstream=https://oop.ownonline.eu/samples/This%20is%20a%20freakin%27%20Sample.mp3</mark></a>         </i><br>Or to play another audio live stream: <a href="https://oop.ownonline.eu/play.php?webstream=https://icecast.omroep.nl/radio2-bb-mp3"><mark>?webstream=https://icecast.omroep.nl/radio2-bb-mp3</mark></a>        </i>  </li>
+          </ul>
+          <br><br>-- As a site operator, you should check the request URL for oOPlay. Feel free to use the oOPlay documentation linked below for this purpose.<br>-- As a website visitor, please inform the site operator about the error.</p>
         <div id="https-upgrades-message" class="hidden" jstcache="0">
           <p id="https-upgrades-message-details" jsselect="httpsUpgradesMessage" jsvalues=".innerHTML:msg" class="hidden" jstcache="15" style="display: none;"></p>
         </div>
@@ -1922,16 +1921,16 @@ TODO(https://crbug.com/852872): UI for offline suggested content is incomplete.
       <div id="details-buttons" jstcache="0">
       
          <form style="display: flex;  flex-flow: row wrap;"  action="" jstcache="0">
-            <a style="fore-color: white;" type="submit" href="mailto:inbox@ownonline.eu" jsselect="reloadButton" jstcache="8">Webmaster Kontaktieren</a>
+            <a style="fore-color: white;" type="submit" href="mailto:<?php echo $copyowner_webmaster_mail ?>" jsselect="reloadButton" jstcache="8">📧 <?php echo $copyowner_webmaster_mail ?></a>
           
        </form>
        <form style="display: flex;  flex-flow: row wrap;"  action="" jstcache="0">
 
-           <a style="fore-color: white;" type="submit" href="https://oop.ownonline.eu/play.php">'oOPlay' öffnen</a>
+          <!-- <a style="fore-color: white;" type="submit" href="https://oop.ownonline.eu/play.php">'oOPlay' öffnen</a> -->
        </form>
               <form style="display: flex;  flex-flow: row wrap;"  action="" jstcache="0">
                    <a style="fore-color: white;" type="submit" href="https://oop.ownonline.eu/about.php">
-                  📖 'oOPlay' Dokumentation</a>
+                  📖 'oOPlay' Documentation</a>
        </form>
       </div>
     </div>
