@@ -13,6 +13,15 @@ $lang = array(
     'from' => 'von',
     'from_who' => 'vom',
     'about' => 'Über',
+    
+    //centralerrorlog
+    'centralerrorlog_error_occured' => 'Beispiel Fehlermeldung beim Laden der Seite.',
+    'centralerrorlog_neterror_occured' => 'Netzwerkfehler beim Laden von ',
+    'centralerrorlog_modal_title' => 'Fehlerkonsole',
+    'centralerrorlog_modal_desc' => 'Wenn Sie auf dieses Fenster Zugriff haben, sind kritische Fehler (höchstwahrscheinlich Verbindungsfehler) aufgetreten. Diese Fehler könnten den weiteren Betrieb von "oOPlay" entweder nur gering oder sehr maßgeblich stören und zum absturz führen. Bitte seien Sie aufmerksam. Wenn Sie sich mit den Entwicklertools Ihres Gerätes auskennen, empfehlen wir Ihnen, auch dort nach zusätzlichen Fehlern zu suchen. Die Fehler können eventuell behebbar sein.',
+    'centralerrorlog_occuring_modal_title' => 'Fehlerkonsole',
+    'centralerrorlog_occuring_modal_desc1' => 'Es sind Fehler aufgetreten! Es kommt eventuelle zu einem Verbindungsverlust! Bitte prüfen Sie die',
+    'centralerrorlog_occuring_modal_desc2' => 'Fehlerkonsole',
 
     //settingspanel oOPlay
     'settingspanel_modal_title' => 'Einstellungen',
